# dbx-vcf-data-source

./: .gitignore  ARROW_PERFORMANCE.md  LICENSE  README.md  TESTING.md  pyproject.toml
examples/: arrow_reader_example.py  databricks_example.py
tests/: __init__.py  conftest.py  test_arrow_directory_reading.py  test_arrow_reader.py  test_compat.py  test_databricks_integration.py  test_integration.py  test_parser_edge_cases.py  test_parser_unit.py  test_reader.py  test_schema.py  test_stream_reader.py
vcf_reader/: __init__.py  arrow_reader.py  compat.py  datasource.py  parser.py  reader.py  schema.py  stream_reader.py
